...
        android:text="Nombre"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbRegisterDiscount" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />
...
        android:text="Compañia"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Spinner
        android:id="@+id/spnCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/tvCompany"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

...
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvTypeDiscount"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeDiscount">

        <RadioButton
            android:id="@+id/rbPercentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="Porcentaje" />

        <RadioButton
...
        android:text="Cantidad"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tvQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantity" />
...
        app:layout_constraintBottom_toBottomOf="@+id/etQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etQuantity"
        app:layout_constraintTop_toTopOf="@+id/etQuantity" />

    <EditText
        android:id="@+id/tvExpiranceDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/tvValidityDate"
        app:layout_constraintTop_toBottomOf="@+id/tvValidityDate" />
...
        android:layout_marginTop="20dp"
        android:text="Cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkActive" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:text="Crear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />
...
