...

    <string name="historial_pagos">Historial de pagos</string>
    <string name="btn_addPago">+</string>

    <string name="error_tipo_combustible">Debes seleccionar un tipo de combustible</string>
    <string name="titulo_error_tipo_combustible">Error en el tipo de combustible</string>
    <string name="error_nombre_gasolinera">Debes introducir un nombre de gasolinera</string>
    <string name="titulo_error_nombre_gasolinera">Error en el nombre de gasolinera</string>
    <string name="error_precio_por_litro">Debes introducir un precio</string>
    <string name="titulo_error_precio_por_litro">Error en el precio por litro</string>
    <string name="error_cantidad_combustible">Debes introducir una cantidad de combustible</string>
    <string name="titulo_error_cantidad_combustible">Error en la cantidad</string>

    <string name="succes_reg_pay">El pago se ha registrado de manera correcta en el historial de pagos</string>
    <string name="title_succes_reg_pay">Registro correcto</string>

    <string name="succes_reg_discount">El descuento se ha creado de manera correcta.</string>
    <string name="title_succes_reg_discount">Registro correcto</string>
    <string name="delete_pay_btn">Boton dedicado a eliminar un pago</string>
    <string name="error_fecha">Debes introducir una fecha</string>
    <string name="titulo_error_fecha">Error en la fecha</string>


...
