<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbRegistroPagos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.Gasolineras.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Registro de pagos" />

    <TextView
        android:id="@+id/tvNombreGasolinera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:inputType="text"
        android:text="Nombre gasolinera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbRegistroPagos" />

    <TextView
        android:id="@+id/tvPrecioPorLitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:inputType="number|numberDecimal"
        android:text="Precio por litro"
        app:layout_constraintStart_toStartOf="@+id/tvNombreGasolinera"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreGasolinera" />

    <TextView
        android:id="@+id/tvCantidad"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:text="Cantidad"
        app:layout_constraintStart_toStartOf="@+id/tvPrecioPorLitro"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPorLitro" />

    <Button
        android:id="@+id/btnRegistrarPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Registrar pago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnTipoCombustible" />

    <Spinner
        android:id="@+id/spnTipoCombustible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha" />

    <EditText
        android:id="@+id/etNombreGasolinera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNombreGasolinera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNombreGasolinera" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPrecioPorLitro"
        app:layout_constraintStart_toStartOf="@+id/etNombreGasolinera" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCantidad"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Fecha"
        app:layout_constraintStart_toStartOf="@+id/tvCantidad"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad" />

    <EditText
        android:id="@+id/tvExpiranceDate2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/tvFecha"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2" />

</androidx.constraintlayout.widget.ConstraintLayout>